--- a/Assignment2/Task1/1_4_model_two_price.ipynb
+++ b/Assignment2/Task1/1_4_model_two_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,12 +97,13 @@
     "beta = 0.8\n",
     "objectiv_values = []\n",
     "exp_profits = []\n",
+    "profits_in = []\n",
     "CVaR_values = []\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +162,13 @@
     "    + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
     "    - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2) for i in 1:W, hour in 1:hours)))\n",
     "\n",
+    "# save the profit of each scenario\n",
+    "for i in 1:W\n",
+    "    push!(profits_in, value.(sum(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
+    "    + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
+    "    - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2) for hour in 1:hours)))\n",
+    "end\n",
+    "\n",
     "\n",
     "#println(model)\n",
     "\n",
@@ -178,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -194,6 +202,7 @@
    "source": [
     "W_new = n_scenarios - W\n",
     "hours = 24\n",
+    "profits_out = []\n",
     "\n",
     "# calculate the expected profit for the out of sample scenarios\n",
     "exp_profit = 0\n",
@@ -209,6 +218,7 @@
     "        end\n",
     "        profit_day += profit\n",
     "    end\n",
+    "    push!(profits_out, profit_day)\n",
     "    exp_profit += profit_day\n",
     "end\n",
     "\n",
@@ -218,12 +228,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"1_4_results/profits.csv\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# create a dataframe with the profits and if the scenanrio is in or out of sample\n",
+    "df = DataFrame(Scenario = 1:W + W_new, Profit = [profits_in; profits_out], In_Out = [fill(\"In\",W); fill(\"Out\",W_new)])  \n",
+    "\n",
+    "# save the data\n",
+    "CSV.write(\"1_4_results/profits.csv\", df)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# plot the distribution of the profits, in and out of sample"
-   ]
+   "source": []
   }
  ],
  "metadata": {
