--- a/Assignment2/Task1/1_4_model_one_price.ipynb
+++ b/Assignment2/Task1/1_4_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"in_sample_scenarios.csv\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "using CSV, Tables\n",
+    "\n",
+    "CSV.write(\"in_sample_scenarios.csv\",  Tables.table(selected_scenarios), writeheader=false)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -111,8 +132,8 @@
      "output_type": "stream",
      "text": [
       "Optimal solution found\n",
-      "Expected profit 129743.68116920897\n",
-      "p_DA: [22.33724183870968, 14.389693451612905, 15.949935451612903, 13.469580564516129, 9.242903161290323, 5.90827414516129, 145.9269354516129, 2.7339112741935483, 1.1038967741935486, 146.94499998387096, 0.7919354838709678, 0.7419306451612904, 142.91516125806453, 1.167741935483871, 135.9887096612903, 2.3072451612903224, 146.0248386935484, 149.60145158064518, 5.493548387096774, 152.74596772580645, 4.493516129032258, 4.803145161290321, 6.808774177419355, 149.57870966129033]\n"
+      "Expected profit 151170.80094988694\n",
+      "p_DA: [199.9999999999999, 0.0, 0.0, 101.36268623281629, 1.820810213759617e-13, 200.00000000000003, 200.0, 0.0, 0.0, 200.0, 0.0, 0.0, 200.0, 200.0, 200.0, -8.526512829121202e-14, 200.0, 200.0, 0.0, 200.0, 0.0, 200.00000000000034, 0.0, 200.0]\n"
      ]
     }
    ],
@@ -131,24 +152,23 @@
     "@variable(model, eta[1:W] >= 0)\n",
     "\n",
     "# Define the objective function\n",
-    "@objective(model, Max, (1-beta) *  sum(1/W*(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "    + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
-    "    - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2)\n",
-    "    + beta  * (zeta - (1/(1-alpha)) * sum(1/W * eta[i] for i in 1:W))) for i in 1:W, hour in 1:hours))\n",
+    "@objective(model, Max, (1-beta) * sum(1/W *\n",
+    "(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
+    "+ scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
+    "+ beta  * (zeta - (1/(1-alpha)) * sum(1/W * eta[i] for i in 1:W)))\n",
     "\n",
     "# Define the constraints\n",
     "@constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
     "@constraint(model, [hour in 1:hours], p_DA[hour] >= 0)\n",
     "@constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == scenarios[i][hour,\"wind power\"] - p_DA[hour])\n",
-    "@constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == delta_up[i,hour] - delta_down[i,hour])\n",
-    "@constraint(model, [i in 1:W, hour in 1:hours], delta_down[i,hour] >= 0)\n",
+    "#@constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == delta_up[i,hour] - delta_down[i,hour])\n",
+    "#@constraint(model, [i in 1:W, hour in 1:hours], delta_down[i,hour] >= 0)\n",
     "#@constraint(model, [i in 1:W, hour in 1:hours], delta_down[i,hour] <= p_DA[hour])\n",
-    "@constraint(model, [i in 1:W, hour in 1:hours], delta_up[i,hour] >= 0)\n",
+    "#@constraint(model, [i in 1:W, hour in 1:hours], delta_up[i,hour] >= 0)\n",
     "#@constraint(model, [i in 1:W, hour in 1:hours], delta_up[i,hour] + p_DA[hour] <= 200)\n",
     "@constraint(model, [i in 1:W], eta[i] >= 0)\n",
-    "@constraint(model, [i in 1:W], -1 * sum(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "+ delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
-    "- delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2) for hour in 1:hours) + zeta - eta[i] <= 0)\n",
+    "@constraint(model, [i in 1:W], -1 * sum((scenarios[i][hour,\"price\"] * p_DA[hour]\n",
+    "+ scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for hour in 1:hours) + zeta - eta[i] <= 0)\n",
     "\n",
     "\n",
     "\n",
@@ -158,15 +178,14 @@
     "# save the p_DA values\n",
     "p_DA_values = value.(p_DA)\n",
     "\n",
-    "exp_profit = value.(sum(1/W.*(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "    + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
-    "    - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2) for i in 1:W, hour in 1:hours)))\n",
+    "exp_profit = sum(1/W .*\n",
+    "(scenarios[i][hour,\"price\"] * value.(p_DA[hour])\n",
+    "+ scenarios[i][hour,\"price\"] * value.(delta[i, hour])*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
     "\n",
     "# save the profit of each scenario\n",
     "for i in 1:W\n",
-    "    push!(profits_in, value.(sum(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "    + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
-    "    - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2) for hour in 1:hours)))\n",
+    "    push!(profits_in, sum((scenarios[i][hour,\"price\"] * value.(p_DA[hour])\n",
+    "    + scenarios[i][hour,\"price\"] * value.(delta[i, hour])*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for hour in 1:hours))\n",
     "end\n",
     "\n",
     "\n",
@@ -186,13 +205,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "134049.43030872848"
+       "155086.1092170251"
       ]
      },
      "metadata": {},
@@ -211,11 +230,7 @@
     "    for hour in 1:hours\n",
     "        profit = 0\n",
     "        profit += unselected_scenarios[i][hour,\"price\"] * p_DA_values[hour] # should the day ahead price be fixed to the first scenario? So instead of i, 1?\n",
-    "        if unselected_scenarios[i][hour,\"wind power\"] > p_DA_values[hour]\n",
-    "            profit += unselected_scenarios[i][hour,\"price\"] * (unselected_scenarios[i][hour,\"wind power\"] - p_DA_values[hour]) * (unselected_scenarios[i][hour,\"grid_excess\"]*0.9 + (1-unselected_scenarios[i][hour,\"grid_excess\"])*1)\n",
-    "        else\n",
-    "            profit -= unselected_scenarios[i][hour,\"price\"] * (p_DA_values[hour] - unselected_scenarios[i][hour,\"wind power\"]) * (unselected_scenarios[i][hour,\"grid_excess\"]*1 + (1-unselected_scenarios[i][hour,\"grid_excess\"])*1.2)\n",
-    "        end\n",
+    "        profit += unselected_scenarios[i][hour,\"price\"] * (unselected_scenarios[i][hour,\"wind power\"]-p_DA_values[hour])*((0.9.*unselected_scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-unselected_scenarios[i][hour,\"grid_excess\"]))\n",
     "        profit_day += profit\n",
     "    end\n",
     "    push!(profits_out, profit_day)\n",
@@ -228,13 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"1_4_results/profits_two_price.csv\""
+       "\"1_4_results/profits_one_price.csv\""
       ]
      },
      "metadata": {},
@@ -246,14 +261,14 @@
     "df = DataFrame(Scenario = 1:W + W_new, Profit = [profits_in; profits_out], In_Out = [fill(\"In\",W); fill(\"Out\",W_new)])  \n",
     "\n",
     "# save the data\n",
-    "CSV.write(\"1_4_results/profits_two_price.csv\", df)\n",
+    "CSV.write(\"1_4_results/profits_one_price.csv\", df)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": []
