--- a/Assignment2/Task1/1_4_plots.ipynb
+++ b/Assignment2/Task1/1_4_plots.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "# load the data from 1_4_results\n",
-    "profits = pd.read_csv('1_4_results/profits.csv')"
+    "profits = pd.read_csv('1_4_results/profits_two_price.csv')"
    ]
   },
   {
