last changes from monday

--- a/Assignment2/Task1/1_1_model.ipynb
+++ b/Assignment2/Task1/1_1_model.ipynb
@@ -94,7 +94,8 @@
     "# Define the objective function\n",
     "@objective(model, Max, sum(1/W .*\n",
     "(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "+ scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours))\n",
+    "+ scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"])\n",
+    "+ 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours))\n",
     "\n",
     "# Define the constraints\n",
     "@constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
