--- a/Assignment2/Task2/model_2_all.ipynb
+++ b/Assignment2/Task2/model_2_all.ipynb
@@ -336,57 +336,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Optimal solution cap_bid: 200.0\n"
-     ]
-    },
-    {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching isless(::Nothing, ::Float64)\n\nClosest candidates are:\n  isless(!Matched::T, ::T) where T<:Union{Float16, Float32, Float64}\n   @ Base float.jl:547\n  isless(!Matched::AbstractFloat, ::AbstractFloat)\n   @ Base operators.jl:177\n  isless(!Matched::AbstractFloat, ::Real)\n   @ Base operators.jl:179\n  ...\n",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching isless(::Nothing, ::Float64)\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  isless(!Matched::T, ::T) where T<:Union{Float16, Float32, Float64}\n",
-      "   @ Base float.jl:547\n",
-      "  isless(!Matched::AbstractFloat, ::AbstractFloat)\n",
-      "   @ Base operators.jl:177\n",
-      "  isless(!Matched::AbstractFloat, ::Real)\n",
-      "   @ Base operators.jl:179\n",
-      "  ...\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] <(x::Nothing, y::Float64)\n",
-      "   @ Base .\\operators.jl:343\n",
-      " [2] >(x::Float64, y::Nothing)\n",
-      "   @ Base .\\operators.jl:369\n",
-      " [3] _broadcast_getindex_evalf\n",
-      "   @ .\\broadcast.jl:683 [inlined]\n",
-      " [4] _broadcast_getindex\n",
-      "   @ .\\broadcast.jl:656 [inlined]\n",
-      " [5] getindex\n",
-      "   @ .\\broadcast.jl:610 [inlined]\n",
-      " [6] copy\n",
-      "   @ .\\broadcast.jl:912 [inlined]\n",
-      " [7] materialize(bc::Base.Broadcast.Broadcasted{Base.Broadcast.DefaultArrayStyle{1}, Nothing, typeof(>), Tuple{Vector{Float64}, Base.RefValue{Nothing}}})\n",
-      "   @ Base.Broadcast .\\broadcast.jl:873\n",
-      " [8] test(p_value::Int64, cvar_value::Float64, also_x_value::Nothing)\n",
-      "   @ Main c:\\Users\\janle\\Desktop\\Master_local\\2\\renewables_in_electricity_markets\\Assignment2\\Task2\\model_2_all.ipynb:14\n",
-      " [9] top-level scope\n",
-      "   @ c:\\Users\\janle\\Desktop\\Master_local\\2\\renewables_in_electricity_markets\\Assignment2\\Task2\\model_2_all.ipynb:4"
+      "q: 0.01089477539062501 num_zeros: 5995\n",
+      "cap_bid: 232.6656707497823\n",
+      "Optimal solution cap_bid: 214.5261157338029\n",
+      "Allowed number of scenarios below CVaR: 15.0\n",
+      "CVaR test passed\n",
+      "7\n",
+      "Also_x test passed\n",
+      "11\n"
      ]
     }
    ],
    "source": [
-    "p_value = 1\n",
+    "p_value = 0.999\n",
     "also_x_value = also_x_function(p_value)\n",
     "cvar_value = cvar_function(p_value)\n",
     "test(p_value, cvar_value, also_x_value)"
