--- a/Assignment2/Task1/1_4_model_one_price.ipynb
+++ b/Assignment2/Task1/1_4_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -103,17 +103,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"in_sample_scenarios.csv\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: Package Tables not found in current path, maybe you meant `import/using .Tables`.\n- Otherwise, run `import Pkg; Pkg.add(\"Tables\")` to install the Tables package.",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: Package Tables not found in current path, maybe you meant `import/using .Tables`.\n",
+      "- Otherwise, run `import Pkg; Pkg.add(\"Tables\")` to install the Tables package.\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] macro expansion\n",
+      "    @ Base ./loading.jl:1766 [inlined]\n",
+      "  [2] macro expansion\n",
+      "    @ Base ./lock.jl:267 [inlined]\n",
+      "  [3] __require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:1747\n",
+      "  [4] #invoke_in_world#3\n",
+      "    @ Base ./essentials.jl:921 [inlined]\n",
+      "  [5] invoke_in_world\n",
+      "    @ Base ./essentials.jl:918 [inlined]\n",
+      "  [6] require(into::Module, mod::Symbol)\n",
+      "    @ Base ./loading.jl:1740\n",
+      "  [7] eval\n",
+      "    @ ./boot.jl:385 [inlined]\n",
+      "  [8] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:2070\n",
+      "  [9] #invokelatest#2\n",
+      "    @ ./essentials.jl:887 [inlined]\n",
+      " [10] invokelatest\n",
+      "    @ ./essentials.jl:884 [inlined]\n",
+      " [11] (::VSCodeServer.var\"#216#217\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:19\n",
+      " [12] withpath(f::VSCodeServer.var\"#216#217\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/repl.jl:274\n",
+      " [13] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      " [14] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/JSONRPC/src/typed.jl:67\n",
+      " [15] serve_notebook(pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; crashreporting_pipename::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:139\n",
+      " [16] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.76.2/scripts/notebook/notebook.jl:35"
+     ]
     }
    ],
    "source": [
@@ -124,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -205,13 +239,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "155086.1092170251"
+       "30751.68994210677"
       ]
      },
      "metadata": {},
@@ -229,8 +263,8 @@
     "    profit_day = 0\n",
     "    for hour in 1:hours\n",
     "        profit = 0\n",
-    "        profit += unselected_scenarios[i][hour,\"price\"] * p_DA_values[hour] # should the day ahead price be fixed to the first scenario? So instead of i, 1?\n",
-    "        profit += unselected_scenarios[i][hour,\"price\"] * (unselected_scenarios[i][hour,\"wind power\"]-p_DA_values[hour])*((0.9.*unselected_scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-unselected_scenarios[i][hour,\"grid_excess\"]))\n",
+    "        profit += unselected_scenarios[1][hour,\"price\"] * p_DA_values[hour] # should the day ahead price be fixed to the first scenario? So instead of i, 1?\n",
+    "        profit += unselected_scenarios[1][hour,\"price\"] * (unselected_scenarios[i][hour,\"wind power\"]-p_DA_values[hour])*((0.9.*unselected_scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-unselected_scenarios[i][hour,\"grid_excess\"]))\n",
     "        profit_day += profit\n",
     "    end\n",
     "    push!(profits_out, profit_day)\n",
@@ -243,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -276,15 +310,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.3",
+   "display_name": "Julia 1.10.0",
    "language": "julia",
-   "name": "julia-1.9"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.9.3"
+   "version": "1.10.0"
   }
  },
  "nbformat": 4,
