Afternoon with Leon

--- a/Assignment2/Task1/1_1_plots.ipynb
+++ b/Assignment2/Task1/1_1_plots.ipynb
@@ -66,6 +66,7 @@
     }
    ],
    "source": [
+    "profits = pd.read_csv('1_1_results/profits_1_1.csv')\n",
     "#make good looking histogram of profits\n",
     "plt.xlabel('Profit')\n",
     "plt.ylabel('Frequency')\n",
