--- a/Assignment2/Task1/1_2_model.ipynb
+++ b/Assignment2/Task1/1_2_model.ipynb
@@ -159,6 +159,26 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the DataFrame directly without dynamic column names\n",
+    "result_df = DataFrame(hour = Int[], p_DA = Float64[])\n",
+    "#, delta = Float64[], delta_up = Float64[], delta_down = Float64[]\n",
+    "\n",
+    "#make a table with the results\n",
+    "scenario = 1\n",
+    "for hour in 1:hours\n",
+    "    push!(result_df, [hour, value(p_DA[hour])])\n",
+    "    #, value(delta[scenario,hour]), value(delta_up[scenario,hour]), value(delta_down[scenario,hour])\n",
+    "end\n",
+    "\n",
+    "pretty_table(result_df, backend = Val(:latex))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -192,34 +212,7 @@
       "  22 & 49.9489 \\\\\n",
       "  23 & 6.80877 \\\\\n",
       "  24 & 149.579 \\\\\\hline\n",
-      "\\end{tabular}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Initialize the DataFrame directly without dynamic column names\n",
-    "result_df = DataFrame(hour = Int[], p_DA = Float64[])\n",
-    "#, delta = Float64[], delta_up = Float64[], delta_down = Float64[]\n",
-    "\n",
-    "#make a table with the results\n",
-    "scenario = 1\n",
-    "for hour in 1:hours\n",
-    "    push!(result_df, [hour, value(p_DA[hour])])\n",
-    "    #, value(delta[scenario,hour]), value(delta_up[scenario,hour]), value(delta_down[scenario,hour])\n",
-    "end\n",
-    "\n",
-    "pretty_table(result_df, backend = Val(:latex))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\\end{tabular}\n",
       "Average profit: 130697.43588726828\n"
      ]
     }
