--- a/Assignment2/Task2/model_2_all.ipynb
+++ b/Assignment2/Task2/model_2_all.ipynb
@@ -384,51 +384,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal solution cap_bid by Also_X: 346.0413071233624\n",
-      "Optimal solution cap_bid by C_Var: 320.2742191869674\n",
-      "CVaR shortfall: 4.629555801922582 Also_X shortfall: 9.597381252795197\n",
-      "Percentage of values below CVaR: 0.12355555555555556\n",
-      "Percentage of values below Also_X: 0.27799999999999997\n",
-      "Optimal solution cap_bid by Also_X: 340.4650200209225\n",
-      "Optimal solution cap_bid by C_Var: 314.5286548933596\n",
-      "CVaR shortfall: 3.9696574439667014 Also_X shortfall: 8.151388199614722\n",
-      "Percentage of values below CVaR: 0.1061111111111111\n",
-      "Percentage of values below Also_X: 0.23955555555555555\n",
-      "Optimal solution cap_bid by Also_X: 333.64391520730425\n",
-      "Optimal solution cap_bid by C_Var: 306.9469948124019\n",
-      "CVaR shortfall: 3.2275220210025273 Also_X shortfall: 6.682135842525239\n",
-      "Percentage of values below CVaR: 0.08955555555555555\n",
-      "Percentage of values below Also_X: 0.19144444444444444\n",
-      "Optimal solution cap_bid by Also_X: 321.8061393650475\n",
-      "Optimal solution cap_bid by C_Var: 296.4980071934071\n",
-      "CVaR shortfall: 2.3909599309668716 Also_X shortfall: 4.822477417536566\n",
-      "Percentage of values below CVaR: 0.07111111111111111\n",
-      "Percentage of values below Also_X: 0.12877777777777777\n",
-      "Optimal solution cap_bid by Also_X: 303.6364140160623\n",
-      "Optimal solution cap_bid by C_Var: 279.1699010793507\n",
-      "CVaR shortfall: 1.372576668556468 Also_X shortfall: 2.941876109532222\n",
-      "Percentage of values below CVaR: 0.04666666666666666\n",
-      "Percentage of values below Also_X: 0.08288888888888889\n",
-      "Optimal solution cap_bid by Also_X: 262.7954678376639\n",
-      "Optimal solution cap_bid by C_Var: 247.82287907406476\n",
-      "CVaR shortfall: 0.417114288603858 Also_X shortfall: 0.7585704277775502\n",
-      "Percentage of values below CVaR: 0.017444444444444443\n",
-      "Percentage of values below Also_X: 0.028\n",
-      "Optimal solution cap_bid by Also_X: 200.29296874999866\n",
-      "Optimal solution cap_bid by C_Var: 200.0\n",
-      "CVaR shortfall: 0.0 Also_X shortfall: 0.0007531168653945599\n",
-      "Percentage of values below CVaR: 0.0\n",
-      "Percentage of values below Also_X: 0.0026666666666666666\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "p_value_list = [0.75, 0.8, 0.85, 0.9, 0.95, 0.99, 0.99999]\n",
     "below_cvar_list = []\n",
@@ -445,6 +403,16 @@
     "    push!(also_x_bids, also_x_value)\n",
     "    push!(cvar_bids, cvar_value)\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make dataframe with results\n",
+    "results_df = DataFrame(p_value = p_value_list, below_cvar = below_cvar_list, below_also_x = below_also_x_list, also_x_bids = also_x_bids, cvar_bids = cvar_bids)"
    ]
   },
   {
