--- a/Assignment2/Task1/1_3_model_two_price.ipynb
+++ b/Assignment2/Task1/1_3_model_two_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -272,21 +272,20 @@
     "        println(\"No optimal solution found\")\n",
     "    end\n",
     "\n",
-    "    # # save the profits of each scenario for this beta in profits_df\n",
-    "    #  profits_df[loop, \"beta\"] = beta\n",
-    "    #  for i in 1:W\n",
-    "    #      profits_df[loop, Symbol(\"profit_scenario_\" * string(i))] = value.(sum(1/W *(\n",
-    "    #         scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "    #         + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
-    "    #         - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2)\n",
-    "    #         ) for hour in 1:hours))\n",
-    "    #  end\n",
+    "    # save the profits of each scenario for this beta in profits_df\n",
+    "     profits_df[loop, \"beta\"] = beta\n",
+    "     for i in 1:W\n",
+    "         profits_df[loop, Symbol(\"profit_scenario_\" * string(i))] = value.(sum(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
+    "            + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
+    "            - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2)\n",
+    "         for hour in 1:hours))\n",
+    "     end\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
