--- a/Assignment2/Task1/1_4_model_one_price.ipynb
+++ b/Assignment2/Task1/1_4_model_one_price.ipynb
@@ -136,8 +136,8 @@
     "# Define the decision variables for hour\n",
     "@variable(model, p_DA[1:hours])\n",
     "@variable(model, delta[1:W,1:hours])\n",
-    "@variable(model, delta_up[1:W,1:hours])\n",
-    "@variable(model, delta_down[1:W,1:hours])\n",
+    "#@variable(model, delta_up[1:W,1:hours])\n",
+    "#@variable(model, delta_down[1:W,1:hours])\n",
     "@variable(model, zeta)\n",
     "@variable(model, eta[1:W] >= 0)\n",
     "\n",
