--- a/Assignment2/Task2/model_2_all.ipynb
+++ b/Assignment2/Task2/model_2_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -259,11 +259,11 @@
     "        for minute in 1:60\n",
     "            if minute_values[minute] < cvar_value\n",
     "                #println(\"Scenario \", i, \" minute \", minute, \" value \", minute_values[minute])\n",
-    "                c_var_shortfall[minute] += (cvar_value - minute_values[minute])/in_sample_n\n",
+    "                c_var_shortfall[minute] += (cvar_value - minute_values[minute])\n",
     "            end\n",
     "            if minute_values[minute] < also_x_value\n",
     "                #println(\"Scenario \", i, \" minute \", minute, \" value \", minute_values[minute])\n",
-    "                also_x_shortfall[minute] += (also_x_value - minute_values[minute])/in_sample_n\n",
+    "                also_x_shortfall[minute] += (also_x_value - minute_values[minute])\n",
     "            end\n",
     "        end\n",
     "        below_cvar += sum(minute_values .< cvar_value)\n",
@@ -272,6 +272,12 @@
     "\n",
     "    below_cvar = below_cvar/in_sample_n/60\n",
     "    below_also_x = below_also_x/in_sample_n/60\n",
+    "\n",
+    "    #sum the shortfalls\n",
+    "    c_var_shortfall = sum(c_var_shortfall)/in_sample_n/60\n",
+    "    also_x_shortfall = sum(also_x_shortfall)/in_sample_n/60\n",
+    "\n",
+    "    println(\"CVaR shortfall: \", c_var_shortfall, \" Also_X shortfall: \", also_x_shortfall)\n",
     "\n",
     "    println(\"Percentage of values below CVaR: \", below_cvar)\n",
     "    println(\"Percentage of values below Also_X: \", below_also_x)\n",
@@ -282,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -352,6 +358,9 @@
      "text": [
       "Optimal solution cap_bid by Also_X: 321.8061393650475\n",
       "Optimal solution cap_bid by C_Var: 296.4980071934071\n",
+      "CVaR shortfall: 0.8988123194512176 Also_X shortfall: 2.530813217163159\n",
+      "Percentage of values below CVaR: 0.03966666666666666\n",
+      "Percentage of values below Also_X: 0.1\n",
       "CVaR shortfall: 2.3909599309668716 Also_X shortfall: 4.822477417536566\n",
       "Percentage of values below CVaR: 0.07111111111111111\n",
       "Percentage of values below Also_X: 0.12877777777777777\n"
@@ -371,7 +380,7 @@
     "p_value = 0.9\n",
     "also_x_value = also_x_function(p_value)\n",
     "cvar_value = cvar_function(p_value)\n",
-    "#in_sample_test(p_value, cvar_value, also_x_value)\n",
+    "in_sample_test(p_value, cvar_value, also_x_value)\n",
     "out_sample_test(p_value, cvar_value, also_x_value)"
    ]
   },
@@ -384,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
