--- a/Assignment2/Task1/1_2_model.ipynb
+++ b/Assignment2/Task1/1_2_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -157,27 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the DataFrame directly without dynamic column names\n",
-    "result_df = DataFrame(hour = Int[], p_DA = Float64[])\n",
-    "#, delta = Float64[], delta_up = Float64[], delta_down = Float64[]\n",
-    "\n",
-    "#make a table with the results\n",
-    "scenario = 1\n",
-    "for hour in 1:hours\n",
-    "    push!(result_df, [hour, value(p_DA[hour])])\n",
-    "    #, value(delta[scenario,hour]), value(delta_up[scenario,hour]), value(delta_down[scenario,hour])\n",
-    "end\n",
-    "\n",
-    "pretty_table(result_df, backend = Val(:latex))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +192,34 @@
       "  22 & 49.9489 \\\\\n",
       "  23 & 6.80877 \\\\\n",
       "  24 & 149.579 \\\\\\hline\n",
-      "\\end{tabular}\n",
+      "\\end{tabular}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize the DataFrame directly without dynamic column names\n",
+    "result_df = DataFrame(hour = Int[], p_DA = Float64[])\n",
+    "#, delta = Float64[], delta_up = Float64[], delta_down = Float64[]\n",
+    "\n",
+    "#make a table with the results\n",
+    "scenario = 1\n",
+    "for hour in 1:hours\n",
+    "    push!(result_df, [hour, value(p_DA[hour])])\n",
+    "    #, value(delta[scenario,hour]), value(delta_up[scenario,hour]), value(delta_down[scenario,hour])\n",
+    "end\n",
+    "\n",
+    "pretty_table(result_df, backend = Val(:latex))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Average profit: 130697.43588726828\n"
      ]
     }
@@ -238,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
